# cpp-template

./: .appveyor.yml  .appveyor.yml.in  .clang-tidy  .editorconfig  .gitignore  .markdownlint.json  CMakeLists.txt  CMakePresets.json  README.md  run-clang-tidy.py  run.sh
.github/workflows/: codeql-analysis.yml
cmake/: git.cmake
src/: main.cpp
